Resolves: fdo#48129 maLangStr can have trailing nulls